fix(designer): fix empty prompts array for new projects, fix current version in designer (#495)
* fix(config): add prompts: [default] to runtime model configs

- Adds prompts: [default] to default.yaml template
- Adds prompts: [default] to advanced.yaml template
- Fixes prompts: [] to prompts: [default] in project seed

* fix(designer): accurate version display in UI

- Server now reads version from LF_VERSION env var instead of hardcoded value
- CLI passes its version to server when starting services
- Docker compose passes IMAGE_TAG as version to server
- Simplified upgrade modal commands to just 'lf version upgrade'

--- a/config/templates/advanced.yaml
+++ b/config/templates/advanced.yaml
@@ -13,6 +13,7 @@ runtime:
     model: llama3.1:8b
     default: true
     prompt_format: unstructured
+    prompts: [default]
     # instructor_mode: json
     # api_key: optional, not needed for ollama
     # model_api_parameters: optional additional parameters
