--- a/config/templates/default.yaml
+++ b/config/templates/default.yaml
@@ -13,6 +13,7 @@ runtime:
       model: unsloth/gemma-3-1b-it-gguf:Q4_K_M
       default: true
       prompt_format: unstructured
+      prompts: [default]
       # instructor_mode: json
       # api_key: optional, not needed for ollama
       # model_api_parameters: optional additional parameters
