--- a/server/seeds/project_seed/llamafarm.yaml
+++ b/server/seeds/project_seed/llamafarm.yaml
@@ -291,7 +291,7 @@ runtime:
       description: Default Universal model for LlamaFarm
       provider: universal
       model: unsloth/Qwen3-1.7B-GGUF:Q4_K_M
-      prompts: []
+      prompts: [default]
       tool_call_strategy: native_api
       tools:
         - type: function
