Feat(designer): list gguf models for download (#503)
* fix(designer): add pagination to on disk models section to avoid massive list

* feat(designer): list gguf models in download recommended models list

* feat(designer): allow models to download in the background / bottom right corner

* fix(designer): add name validation to prompt names to avoid duplicates and special characters

* fix(designer): update model card tags to display "local" instead of incorrect "cloud"

* chore(designer): clean up branch redundancies created

* fix(designer): address build errors and comments

* fix(designer): build error

* fix(designer): build errors again?

* fix(designer): add small padding under list of inference models

* chore: unify common model code

* chore: remove duplicated tests

---------

Co-authored-by: Matt Hamann <mhamann@rownd.io>

--- a/common/pyproject.toml
+++ b/common/pyproject.toml
@@ -3,7 +3,10 @@ name = "llamafarm-common"
 version = "0.1.0"
 description = "Common utilities shared across LlamaFarm Python services"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "huggingface_hub>=0.24.0",
+    "hf-transfer>=0.1.9",  # High-speed downloads (set HF_HUB_ENABLE_HF_TRANSFER=1)
+]
 
 [project.optional-dependencies]
 dev = ["pytest>=8.0.0"]
