--- a/designer/package.json
+++ b/designer/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.539.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
