feat: Add automatic model download management (#545)
* feat(electron,cli): Add automatic model download management

Add model download checking and management to the electron app startup:

- Add required-models.yaml config defining models to check/download:
  - unsloth/gemma-3-1b-it-gguf:Q4_K_M (language model)
  - nomic-ai/nomic-embed-text-v1.5 (embedding model)

- Add model-downloader.ts module:
  - Uses CLI commands (lf models pull/status) for all operations
  - Progress reporting via callbacks

- Add CLI commands for model management:
  - lf models pull <model-id> - Download a model from HuggingFace
  - lf models status <model-id> - Check if model is cached

- Update splash screen with model status UI:
  - Shows each model with status icons (checkmark/downloading/error)
  - Per-model progress bars during download

- Integrate into startup sequence after server ready

* feat(electron): Add build-time sync for required models

- Add sync-required-models.js script that extracts models from config templates
- Script reads config/templates/default.yaml and server/seeds/project_seed/llamafarm.yaml
- Extracts universal provider models and UniversalEmbedder models
- Generates required-models.yaml with model IDs, quantizations, and size estimates
- Runs automatically before build via prebuild npm script
- Includes the updated sentence-transformers/all-MiniLM-L6-v2 embedder

* chore: Standardize on sentence-transformers/all-MiniLM-L6-v2 embedder

Update project_seed to use same embedder as default.yaml.
Reduces required model downloads from 4 to 3 (~550MB savings).

* fix(cli): Ensure hardware-specific wheels are installed on first run

The universal-runtime requires llama-cpp-python and torch which need
hardware-specific wheel installation (Metal on macOS, CUDA on Linux, etc).

Previously, areDependenciesSynced() only checked for .venv directories,
so if source was synced but hardware wheels weren't installed yet,
subsequent runs would skip SyncDependencies() entirely - 

--- a/config/templates/default.yaml
+++ b/config/templates/default.yaml
@@ -10,7 +10,7 @@ runtime:
     - name: default
       description: "Default Universal model"
       provider: universal
-      model: unsloth/gemma-3-1b-it-gguf:Q4_K_M
+      model: unsloth/Qwen3-1.7B-GGUF:Q4_K_M
       default: true
       prompt_format: unstructured
       prompts: [default]
@@ -147,8 +147,8 @@ rag:
           type: "UniversalEmbedder"
           priority: 0
           config:
-            model: nomic-ai/nomic-embed-text-v1.5
-            dimension: 768
+            model: sentence-transformers/all-MiniLM-L6-v2
+            dimension: 384
             batch_size: 16
             timeout: 60
             auto_pull: true # Available retrieval strategies
