--- a/server/seeds/project_seed/llamafarm.yaml
+++ b/server/seeds/project_seed/llamafarm.yaml
@@ -48,8 +48,8 @@ rag:
         - name: default_embeddings
           type: UniversalEmbedder
           config:
-            model: nomic-ai/nomic-embed-text-v1.5
-            dimension: 768
+            model: sentence-transformers/all-MiniLM-L6-v2
+            dimension: 384
             batch_size: 16
             timeout: 60
             auto_pull: true
