--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -29,6 +29,8 @@
     }
   ],
   "scripts": {
+    "sync-models": "node scripts/sync-required-models.js",
+    "prebuild": "npm run sync-models",
     "dev": "electron-vite dev",
     "build": "electron-vite build",
     "preview": "electron-vite preview",
@@ -40,9 +42,11 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "electron-updater": "^6.1.7"
+    "electron-updater": "^6.1.7",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.10.0",
     "electron": "^28.0.0",
     "electron-builder": "^26.0.12",
@@ -59,7 +63,8 @@
     "files": [
       "dist/**/*",
       "package.json",
-      "node_modules/**/*"
+      "node_modules/**/*",
+      "required-models.yaml"
     ],
     "publish": {
       "provider": "github",
