Preserve config format when updating projects or creating from template (#569)
* fix: preserve comments and some formatting when saving configs

* fix(config): preserve multiline strings in configs

* chore(config): sync config from lf data dir after project creation

* chore(cli): exit on sync error after project creation

* chore(config): add error handling to _save_yaml_preserved

--- a/config/pyproject.toml
+++ b/config/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
   "jsonschema>=4.23.0",
   "jsonschema-path>=0.3.4",
   "PyYAML>=6.0",
+  "ruamel.yaml>=0.18.0",
   "tomli>=2.0.0; python_version<'3.11'",
+  "tomli-w>=1.0.0",
 ]
 
 [dependency-groups]
