--- a/project.json
+++ b/project.json
@@ -44,6 +44,7 @@
         "{workspaceRoot}/common/**/*",
         "{workspaceRoot}/config/**/*",
         "{workspaceRoot}/runtimes/universal/**/*",
+        "{workspaceRoot}/packages/llamafarm-llama/**/*",
         "{workspaceRoot}/designer/dist/**/*"
       ],
       "outputs": [
