feat(runtime): support for native tool calling (#636)
* feat(runtime): support for native tool calling

* feat(runtime): auto-summarization support

* chore: labeling

* chore: pr fixups

* chore: ruff lint

* chore: test fixes

* chore: improve test resilience

* fix(runtime): recent message summarization

* fix: tool call streaming, tool selection, native tool calls, jinja templates

* chore: add tests

* feat(runtime): honor tool_choice param

* chore: pr fixups

* chore: lint

--- a/runtimes/universal/pyproject.toml
+++ b/runtimes/universal/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
   "protobuf>=6.33.1",
   "sentencepiece>=0.2.1",
   "cachetools>=6.0.0",  # TTL-based model caching
+  "jinja2>=3.0.0",  # For tool-aware chat template rendering
 ]
 
 [dependency-groups]
