feat: auto-process files on dataset upload (#661)
* feat: automatic file processing

* fix: linting

* fix: override validation

* fix: chunk overrides

* fix: build errors

* chore: update tests to expect new auto_process field

* fix: lint issues in datasets

* fix: reformatting

* fix: use type-safe switch

* fix: cli flag conflict detection

* fix: error handling in bulk upload

* fix: missing strategy field

* fix: add upper limit for chunk size

* chore: validate chunk overlap and chunk size

* fix: missing safety checks for parser chunk overrides

* fix: parser override cannot mutate cached configs

* fix: set default auto process

* fix: reject non-dict overrides

* fix: type annotation

--- a/config/templates/advanced.yaml
+++ b/config/templates/advanced.yaml
@@ -41,6 +41,7 @@ prompts:
 # =============================================================================
 # DATASETS CONFIGURATION
 # =============================================================================
+# Add datasets here; auto_process defaults to true unless explicitly set false
 datasets: []
 
 # =============================================================================
