--- a/config/templates/default.yaml
+++ b/config/templates/default.yaml
@@ -118,6 +118,7 @@ datasets:
   - name: default
     database: main_database
     data_processing_strategy: universal_processor
+    auto_process: true
 
 # =============================================================================
 # RAG CONFIGURATION
