--- a/config/tests/sample_config.yaml
+++ b/config/tests/sample_config.yaml
@@ -47,6 +47,7 @@ datasets:
   - name: "sample_dataset"
     data_processing_strategy: "default"
     database: "support_db"
+    auto_process: true
 
 runtime:
   provider: "openai"
