--- a/runtimes/universal/pyproject.toml
+++ b/runtimes/universal/pyproject.toml
@@ -90,6 +90,14 @@ anomaly = ["scikit-learn>=1.3.0"]
 # Text classification (now in main deps, kept for backwards compatibility)
 classification = ["setfit>=1.1.0", "sentence-transformers>=3.0.0"]
 
+# Speech-to-text with faster-whisper
+# Usage: uv pip install "universal-runtime[speech]"
+speech = [
+  "faster-whisper>=1.0.0",
+  "webrtcvad>=2.0.10",  # Voice activity detection for streaming
+  "av>=12.0.0",  # PyAV for efficient compressed audio decoding (WebM/Opus)
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
